# base-wordle

./: .pre-commit-config.yaml  CHANGES.md  README.md  pyproject.toml
scripts/: assemble.py
src/basewordle/: __main__.py  code.py
tests/: test_roundtrip.py
